--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 <iframe id="appFrame"></iframe>
 
 <script>
-/* ================= CONFIG ================= */
+let rowId = null;
+let linkId = null;
+let subscribedOnce = false;
 
 const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
 const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
@@ -98,14 +100,7 @@ const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383
 
 const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
 
-/* ================= STATE ================= */
-
-let rowId = null;
-let linkId = null;
-let subscribedOnce = false;
-
-/* ================= AUTO LOGIN ================= */
-
+/* AUTO LOGIN */
 window.addEventListener('DOMContentLoaded', () => {
   const savedRow  = localStorage.getItem('rowId');
   const savedLink = localStorage.getItem('linkId');
@@ -118,8 +113,7 @@ window.addEventListener('DOMContentLoaded', () => {
   }
 });
 
-/* ================= LOGIN ================= */
-
+/* LOGIN */
 async function submitRowId() {
   const error = document.getElementById('loginError');
   rowId = document.getElementById('rowIdInput').value.trim();
@@ -142,7 +136,6 @@ async function submitRowId() {
     }
 
     linkId = data.link_id;
-
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('linkId', linkId);
 
@@ -154,16 +147,14 @@ async function submitRowId() {
   }
 }
 
-/* ================= UNLOCK APP ================= */
-
+/* UNLOCK APP */
 function unlockApp() {
   document.getElementById('loginOverlay').style.display = 'none';
   const frame = document.getElementById('appFrame');
   if (!frame.src) frame.src = APP_URL;
 }
 
-/* ================= ONESIGNAL ================= */
-
+/* ONESIGNAL — FIXED FLOW */
 function initOneSignal() {
   if (subscribedOnce) return;
   subscribedOnce = true;
@@ -173,29 +164,29 @@ function initOneSignal() {
 
     await OneSignal.init({
       appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
-
-      /* REQUIRED FOR GITHUB PAGES */
       path: "/signals/",
       serviceWorkerPath: "signals/OneSignalSDKWorker.js",
       serviceWorkerUpdaterPath: "signals/OneSignalSDKUpdaterWorker.js",
-
       notifyButton: { enable: false }
     });
 
-    /* 🔐 SET EXTERNAL USER ID = PASSWORD */
-    await OneSignal.login(rowId);
-
-    const enabled = await OneSignal.isPushNotificationsEnabled();
+    /* 1️⃣ ASK FOR PERMISSION */
+    let enabled = await OneSignal.isPushNotificationsEnabled();
     if (!enabled) {
       await OneSignal.showNativePrompt();
     }
 
-    const finalState = await OneSignal.isPushNotificationsEnabled();
-    if (!finalState) return;
+    /* 2️⃣ WAIT UNTIL SUBSCRIBED */
+    enabled = await OneSignal.isPushNotificationsEnabled();
+    if (!enabled) return;
 
+    /* 3️⃣ NOW LOGIN (SETS EXTERNAL ID) */
+    await OneSignal.login(rowId);
+
+    /* 4️⃣ GET PLAYER ID */
     const playerId = await OneSignal.getUserId();
 
-    /* REGISTER DEVICE IN SUPABASE */
+    /* 5️⃣ SEND TO SUPABASE */
     fetch(REGISTER_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
