--- a/index.html
+++ b/index.html
@@ -1,80 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Signal Alerts — Bet Point</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Signal Alerts — Bet Point</title>
 
-  <!-- PWA -->
-  <link rel="manifest" href="./manifest.json">
-  <meta name="theme-color" content="#007bff">
+<!-- PWA -->
+<link rel="manifest" href="./manifest.json">
+<meta name="theme-color" content="#007bff">
 
-  <!-- iOS Icon -->
-  <link rel="apple-touch-icon" href="./icon-1024x1024.png">
+<!-- iOS Icon -->
+<link rel="apple-touch-icon" href="./icon-1024x1024.png">
 
-  <!-- OneSignal SDK -->
-  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<!-- OneSignal SDK -->
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      width: 100%;
-      font-family: Arial, sans-serif;
-      background: #000;
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-    }
-
-    #loginOverlay {
-      position: fixed;
-      inset: 0;
-      background: #000;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-      color: #fff;
-    }
-
-    #loginOverlay img {
-      width: 96px;
-      height: 96px;
-      margin-bottom: 16px;
-    }
-
-    #loginOverlay input {
-      padding: 12px;
-      font-size: 16px;
-      width: 220px;
-      border-radius: 6px;
-      border: none;
-      margin-bottom: 12px;
-    }
-
-    #loginOverlay button {
-      padding: 12px 18px;
-      font-size: 16px;
-      border-radius: 6px;
-      border: none;
-      background: #007bff;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    #loginError {
-      color: #ff4d4d;
-      margin-top: 12px;
-    }
-  </style>
+<style>
+  html, body {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    font-family: Arial, sans-serif;
+    background: #000;
+  }
+  iframe { width:100%; height:100%; border:none; display:block; }
+  #loginOverlay {
+    position: fixed; inset: 0; background: #000;
+    display:flex; flex-direction:column; justify-content:center; align-items:center;
+    z-index:999; color:#fff;
+  }
+  #loginOverlay img { width:96px; height:96px; margin-bottom:16px; }
+  #loginOverlay input {
+    padding:12px; font-size:16px; width:220px; border-radius:6px; border:none; margin-bottom:12px;
+  }
+  #loginOverlay button {
+    padding:12px 18px; font-size:16px; border-radius:6px; border:none; background:#007bff; color:#fff; cursor:pointer;
+  }
+  #loginError { color:#ff4d4d; margin-top:12px; }
+</style>
 </head>
-
 <body>
 
 <!-- LOGIN -->
@@ -90,21 +54,19 @@
 <iframe id="appFrame"></iframe>
 
 <script>
-let rowId = null;
-let linkId = null;
-let subscribedOnce = false;
-
+/* CONFIG */
 const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
 const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
 const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
-
 const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
+
+let rowId = null;
+let linkId = null;
 
 /* AUTO LOGIN */
 window.addEventListener('DOMContentLoaded', () => {
-  const savedRow  = localStorage.getItem('rowId');
+  const savedRow = localStorage.getItem('rowId');
   const savedLink = localStorage.getItem('linkId');
-
   if (savedRow && savedLink) {
     rowId = savedRow;
     linkId = savedLink;
@@ -113,35 +75,29 @@ window.addEventListener('DOMContentLoaded', () => {
   }
 });
 
-/* LOGIN */
+/* LOGIN FUNCTION */
 async function submitRowId() {
   const error = document.getElementById('loginError');
   rowId = document.getElementById('rowIdInput').value.trim();
   if (!rowId) return;
-
   error.textContent = '';
 
   try {
     const res = await fetch(VERIFY_URL, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
+      method:'POST',
+      headers:{ 'Content-Type':'application/json' },
       body: JSON.stringify({ row_id: rowId })
     });
-
     const data = await res.json();
-
     if (!data.valid) {
       error.textContent = 'Invalid password';
       return;
     }
-
     linkId = data.link_id;
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('linkId', linkId);
-
     unlockApp();
     initOneSignal();
-
   } catch {
     error.textContent = 'Server error';
   }
@@ -154,57 +110,50 @@ function unlockApp() {
   if (!frame.src) frame.src = APP_URL;
 }
 
-/* ONESIGNAL — FIXED FLOW */
+/* ONESIGNAL INIT WITH BELL HOOK */
 function initOneSignal() {
-  if (subscribedOnce) return;
-  subscribedOnce = true;
-
   window.OneSignalDeferred = window.OneSignalDeferred || [];
-  OneSignalDeferred.push(async function (OneSignal) {
-
+  OneSignalDeferred.push(async function(OneSignal) {
     await OneSignal.init({
-      appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
-      path: "/signals/",
-      serviceWorkerPath: "signals/OneSignalSDKWorker.js",
-      serviceWorkerUpdaterPath: "signals/OneSignalSDKUpdaterWorker.js",
-      notifyButton: { enable: false }
+      appId:"2b94ad70-2518-44d4-aaef-bfb95739206f",
+      path:"/signals/",
+      serviceWorkerPath:"signals/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath:"signals/OneSignalSDKUpdaterWorker.js",
+      notifyButton:{ enable:true } // bell already visible
     });
 
-    /* 1️⃣ ASK FOR PERMISSION */
-    let enabled = await OneSignal.isPushNotificationsEnabled();
-    if (!enabled) {
-      await OneSignal.showNativePrompt();
-    }
+    // Listen for subscription changes
+    OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
+      if (!event.current?.optedIn) return;
+      const rowIdLocal = localStorage.getItem("rowId");
+      const linkIdLocal = localStorage.getItem("linkId");
+      if (!rowIdLocal) return;
 
-    /* 2️⃣ WAIT UNTIL SUBSCRIBED */
-    enabled = await OneSignal.isPushNotificationsEnabled();
-    if (!enabled) return;
+      // Set External ID = rowId when user subscribes
+      await OneSignal.login(rowIdLocal);
+      const playerId = await OneSignal.getUserId();
 
-    /* 3️⃣ NOW LOGIN (SETS EXTERNAL ID) */
-    await OneSignal.login(rowId);
-
-    /* 4️⃣ GET PLAYER ID */
-    const playerId = await OneSignal.getUserId();
-
-    /* 5️⃣ SEND TO SUPABASE */
-    fetch(REGISTER_URL, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        rowId,
-        linkId,
-        playerId,
-        deviceType
+      // Save to Supabase
+      fetch(REGISTER_URL, {
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body: JSON.stringify({
+          rowId: rowIdLocal,
+          linkId: linkIdLocal,
+          playerId,
+          deviceType
+        })
       })
-    })
-    .then(res => res.json())
-    .then(console.log)
-    .catch(console.error);
+      .then(res => res.json())
+      .then(console.log)
+      .catch(console.error);
+    });
   });
 }
 </script>
 
 </body>
 </html>
+
 
 
