--- a/index.html
+++ b/index.html
@@ -14,23 +14,59 @@
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 
 <style>
-html, body { margin:0; height:100%; width:100%; font-family:Arial,sans-serif; background:#000; }
-iframe { width:100%; height:100%; border:none; display:block; }
-#loginOverlay {
-  position:fixed; inset:0; background:#000;
-  display:flex; flex-direction:column; justify-content:center; align-items:center;
-  z-index:999; color:#fff;
+html, body {
+  margin:0;
+  height:100%;
+  width:100%;
+  font-family:Arial,sans-serif;
+  background:#000;
 }
-#loginOverlay img { width:96px; height:96px; margin-bottom:16px; }
+iframe {
+  width:100%;
+  height:100%;
+  border:none;
+  display:block;
+}
+#loginOverlay {
+  position:fixed;
+  inset:0;
+  background:#000;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  z-index:999;
+  color:#fff;
+}
+#loginOverlay img {
+  width:96px;
+  height:96px;
+  margin-bottom:16px;
+}
 #loginOverlay input {
-  padding:12px; font-size:16px; width:220px; border-radius:6px; border:none; margin-bottom:12px;
+  padding:12px;
+  font-size:16px;
+  width:220px;
+  border-radius:6px;
+  border:none;
+  margin-bottom:12px;
 }
 #loginOverlay button {
-  padding:12px 18px; font-size:16px; border-radius:6px; border:none; background:#007bff; color:#fff; cursor:pointer;
+  padding:12px 18px;
+  font-size:16px;
+  border-radius:6px;
+  border:none;
+  background:#007bff;
+  color:#fff;
+  cursor:pointer;
 }
-#loginError { color:#ff4d4d; margin-top:12px; }
+#loginError {
+  color:#ff4d4d;
+  margin-top:12px;
+}
 </style>
 </head>
+
 <body>
 
 <!-- LOGIN -->
@@ -46,6 +82,70 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <iframe id="appFrame"></iframe>
 
 <script>
+/* CONFIG */
+const VERIFY_URL   = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link";
+const REGISTER_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device";
+const APP_URL      = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
+
+const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? "mobile" : "web";
+
+let rowId = null;
+let linkId = null;
+
+/* AUTO LOGIN */
+window.addEventListener("DOMContentLoaded", () => {
+  const savedRow = localStorage.getItem("rowId");
+  const savedLink = localStorage.getItem("linkId");
+
+  if (savedRow && savedLink) {
+    rowId = savedRow;
+    linkId = savedLink;
+    unlockApp();
+    initOneSignal();
+  }
+});
+
+/* LOGIN */
+async function submitRowId() {
+  const error = document.getElementById("loginError");
+  rowId = document.getElementById("rowIdInput").value.trim();
+  if (!rowId) return;
+
+  error.textContent = "";
+
+  try {
+    const res = await fetch(VERIFY_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ row_id: rowId })
+    });
+
+    const data = await res.json();
+    if (!data.valid) {
+      error.textContent = "Invalid password";
+      return;
+    }
+
+    linkId = data.link_id;
+    localStorage.setItem("rowId", rowId);
+    localStorage.setItem("linkId", linkId);
+
+    unlockApp();
+    initOneSignal();
+
+  } catch {
+    error.textContent = "Server error";
+  }
+}
+
+/* UNLOCK APP */
+function unlockApp() {
+  document.getElementById("loginOverlay").style.display = "none";
+  const frame = document.getElementById("appFrame");
+  if (!frame.src) frame.src = APP_URL;
+}
+
+/* ONESIGNAL – THE ONLY CORRECT WAY */
 function initOneSignal() {
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(async function (OneSignal) {
@@ -58,49 +158,49 @@ function initOneSignal() {
       notifyButton: { enable: true }
     });
 
-    const rowIdLocal = localStorage.getItem("rowId");
+    const rowIdLocal  = localStorage.getItem("rowId");
     const linkIdLocal = localStorage.getItem("linkId");
     if (!rowIdLocal) return;
 
-    // 🔔 Listen for ACTUAL subscription
+    // 🔔 THIS is when the player ACTUALLY exists
     OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
       if (!event.current?.optedIn) return;
 
       try {
-        // 1️⃣ Attach external ID
+        // 1️⃣ Attach external_id
         await OneSignal.login(rowIdLocal);
 
-        // 2️⃣ Guaranteed OneSignal ID (player exists now)
-        const playerId = OneSignal.User.onesignalId;
-        if (!playerId) {
+        // 2️⃣ Guaranteed OneSignal player ID
+        const oneSignalId = OneSignal.User.onesignalId;
+        if (!oneSignalId) {
           console.error("OneSignal ID missing");
           return;
         }
 
-        console.log("✅ OneSignal ID:", playerId);
+        console.log("✅ OneSignal ID:", oneSignalId);
 
         // 3️⃣ Save to Supabase
-        await fetch("https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device", {
+        const res = await fetch(REGISTER_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             rowId: rowIdLocal,
             linkId: linkIdLocal,
-            one_signal_id: playerId,
-            device_type: /Mobi|Android/i.test(navigator.userAgent) ? "mobile" : "web"
+            one_signal_id: oneSignalId,
+            device_type: deviceType
           })
         });
 
-        console.log("✅ Saved OneSignal ID to Supabase");
+        const json = await res.json();
+        console.log("✅ Supabase response:", json);
 
       } catch (err) {
-        console.error("OneSignal sync error:", err);
+        console.error("❌ OneSignal sync error:", err);
       }
     });
   });
 }
 </script>
-
 
 </body>
 </html>
