--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+https://betpointalerts.github.io/index.html?row_id=xtcyu.AJRd2eOdzoOxjOuw url example, this is my current code<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -37,85 +37,169 @@ iframe {
   align-items:center;
   z-index:999;
   color:#fff;
-  text-align:center;
-  padding:24px;
 }
 #loginOverlay img {
   width:96px;
   height:96px;
-  margin-bottom:20px;
+  margin-bottom:16px;
 }
-#loginOverlay p {
-  max-width:320px;
-  line-height:1.5;
-  font-size:15px;
-  color:#ddd;
+#loginOverlay input {
+  padding:12px;
+  font-size:16px;
+  width:220px;
+  border-radius:6px;
+  border:none;
+  margin-bottom:12px;
+}
+#loginOverlay button {
+  padding:12px 18px;
+  font-size:16px;
+  border-radius:6px;
+  border:none;
+  background:#007bff;
+  color:#fff;
+  cursor:pointer;
+}
+#loginError {
+  color:#ff4d4d;
+  margin-top:12px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- LOCK SCREEN -->
+<!-- LOGIN -->
 <div id="loginOverlay">
   <img src="./icon-1024x1024.png" alt="Logo">
-  <p>
-    ADD THIS APP TO YOUR HOME SCREEN<br><br>
-    THEN SUBSCRIBE TO NOTIFICATIONS<br>
-    BY CLICKING THE <span style="color:#ff3b3b;font-weight:bold;">RED BELL</span><br>
-    IN THE APP
-  </p>
+  <h2>Enter Password</h2>
+  <input type="password" id="rowIdInput" placeholder="Password">
+  <button onclick="submitRowId()">Submit</button>
+  <div id="loginError"></div>
 </div>
 
 <!-- APP -->
 <iframe id="appFrame"></iframe>
 
 <script>
+/* CONFIG */
+const VERIFY_URL   = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link";
 const REGISTER_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device";
-const APP_URL = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
+const APP_URL      = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
+
 const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? "mobile" : "web";
 
-const params = new URLSearchParams(window.location.search);
-const rowId = params.get("row_id");
+let rowId = null;
+let linkId = null;
 
-window.OneSignalDeferred = window.OneSignalDeferred || [];
-OneSignalDeferred.push(async function (OneSignal) {
+/* AUTO LOGIN */
+window.addEventListener("DOMContentLoaded", () => {
+  const savedRow = localStorage.getItem("rowId");
+  const savedLink = localStorage.getItem("linkId");
 
-  await OneSignal.init({
-    appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
-    path: "/signals/",
-    serviceWorkerPath: "signals/OneSignalSDKWorker.js",
-    serviceWorkerUpdaterPath: "signals/OneSignalSDKUpdaterWorker.js",
-    notifyButton: { enable: false } // ⛔ hide bell initially
-  });
+  if (savedRow && savedLink) {
+    rowId = savedRow;
+    linkId = savedLink;
+    unlockApp();
+    initOneSignal();
+  }
+});
 
+/* LOGIN */
+async function submitRowId() {
+  const error = document.getElementById("loginError");
+  rowId = document.getElementById("rowIdInput").value.trim();
   if (!rowId) return;
 
-  // ✅ show bell ONLY after login (row_id exists)
-  OneSignal.Notifications.setEnabled(true);
+  error.textContent = "";
 
-  OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
-    if (!event.current?.optedIn) return;
-
-    await OneSignal.login(rowId);
-
-    const oneSignalId = OneSignal.User.onesignalId;
-    if (!oneSignalId) return;
-
-    await fetch(REGISTER_URL, {
+  try {
+    const res = await fetch(VERIFY_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        rowId,
-        playerId: oneSignalId,
-        deviceType
-      })
+      body: JSON.stringify({ row_id: rowId })
     });
 
-    document.getElementById("loginOverlay").style.display = "none";
-    document.getElementById("appFrame").src = APP_URL;
+    const data = await res.json();
+    if (!data.valid) {
+      error.textContent = "Invalid password";
+      return;
+    }
+
+    linkId = data.link_id;
+    localStorage.setItem("rowId", rowId);
+    localStorage.setItem("linkId", linkId);
+
+    unlockApp();
+    initOneSignal();
+
+  } catch {
+    error.textContent = "Server error";
+  }
+}
+
+/* UNLOCK APP */
+function unlockApp() {
+  document.getElementById("loginOverlay").style.display = "none";
+  const frame = document.getElementById("appFrame");
+  if (!frame.src) frame.src = APP_URL;
+}
+
+/* ONESIGNAL – THE ONLY CORRECT WAY */
+function initOneSignal() {
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function (OneSignal) {
+
+    await OneSignal.init({
+      appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
+      path: "/signals/",
+      serviceWorkerPath: "signals/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath: "signals/OneSignalSDKUpdaterWorker.js",
+      notifyButton: { enable: true }
+    });
+
+    const rowIdLocal  = localStorage.getItem("rowId");
+    const linkIdLocal = localStorage.getItem("linkId");
+    if (!rowIdLocal) return;
+
+    // 🔔 THIS is when the player ACTUALLY exists
+    OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
+      if (!event.current?.optedIn) return;
+
+      try {
+        // 1️⃣ Attach external_id
+        await OneSignal.login(rowIdLocal);
+
+        // 2️⃣ Guaranteed OneSignal player ID
+        const oneSignalId = OneSignal.User.onesignalId;
+        if (!oneSignalId) {
+          console.error("OneSignal ID missing");
+          return;
+        }
+
+        console.log("✅ OneSignal ID:", oneSignalId);
+
+        // 3️⃣ Save to Supabase
+        const res = await fetch(REGISTER_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            rowId: rowIdLocal,
+            linkId: linkIdLocal,
+            one_signal_id: oneSignalId,
+            device_type: deviceType
+          })
+        });
+
+        const json = await res.json();
+        console.log("✅ Supabase response:", json);
+
+      } catch (err) {
+        console.error("❌ OneSignal sync error:", err);
+      }
+    });
   });
-});
+}
 </script>
 
 </body>
