--- a/index.html
+++ b/index.html
@@ -21,72 +21,55 @@ html, body {
   font-family:Arial,sans-serif;
   background:#000;
 }
-
-/* INSTALL PROMPT */
-#installOverlay {
-  position:fixed;
-  inset:0;
-  background:#000;
-  color:#fff;
-  display:none;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  z-index:1000;
-}
-
-#installOverlay img {
-  width:96px;
-  height:96px;
-  margin-bottom:20px;
-}
-
-#installOverlay h2 {
-  font-size:20px;
-  margin-bottom:12px;
-}
-
-#installOverlay p {
-  font-size:14px;
-  opacity:0.85;
-  max-width:280px;
-}
-
-/* LOGIN (fallback only) */
-#loginOverlay {
-  position:fixed;
-  inset:0;
-  background:#000;
-  display:none;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  z-index:999;
-  color:#fff;
-}
-
 iframe {
   width:100%;
   height:100%;
   border:none;
   display:block;
 }
+#loginOverlay {
+  position:fixed;
+  inset:0;
+  background:#000;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  z-index:999;
+  color:#fff;
+}
+#loginOverlay img {
+  width:96px;
+  height:96px;
+  margin-bottom:16px;
+}
+#loginOverlay input {
+  padding:12px;
+  font-size:16px;
+  width:220px;
+  border-radius:6px;
+  border:none;
+  margin-bottom:12px;
+}
+#loginOverlay button {
+  padding:12px 18px;
+  font-size:16px;
+  border-radius:6px;
+  border:none;
+  background:#007bff;
+  color:#fff;
+  cursor:pointer;
+}
+#loginError {
+  color:#ff4d4d;
+  margin-top:12px;
+}
 </style>
 </head>
 
 <body>
 
-<!-- ADD TO HOME SCREEN -->
-<div id="installOverlay">
-  <img src="./icon-1024x1024.png" alt="Logo">
-  <h2>ADD THIS APP TO YOUR HOME SCREEN</h2>
-  <p>
-    Then open the app and tap the 🔴 bell to subscribe to signal notifications
-  </p>
-</div>
-
-<!-- LOGIN (only if NO row_id anywhere) -->
+<!-- LOGIN -->
 <div id="loginOverlay">
   <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Enter Password</h2>
@@ -99,7 +82,7 @@ iframe {
 <iframe id="appFrame"></iframe>
 
 <script>
-/* ================= CONFIG ================= */
+/* CONFIG */
 const VERIFY_URL   = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link";
 const REGISTER_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device";
 const APP_URL      = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
@@ -109,80 +92,20 @@ const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? "mobile" : "web";
 let rowId = null;
 let linkId = null;
 
-/* =============== HELPERS =============== */
-function isRunningAsPWA() {
-  return (
-    window.matchMedia('(display-mode: standalone)').matches ||
-    window.matchMedia('(display-mode: fullscreen)').matches ||
-    window.navigator.standalone === true
-  );
-}
-
-function getRowIdFromURL() {
-  const params = new URLSearchParams(window.location.search);
-  return params.get("row_id");
-}
-
-/* =============== BOOTSTRAP (STRICT) =============== */
-window.addEventListener("DOMContentLoaded", async () => {
-
-  const urlRowId = getRowIdFromURL();
-
-  /* 🔒 HARD GATE: row_id present */
-  if (urlRowId) {
-
-    // NOT INSTALLED → ONLY show install screen
-    if (!isRunningAsPWA()) {
-      document.getElementById("installOverlay").style.display = "flex";
-      return; // ⛔ STOP EVERYTHING
-    }
-
-    // INSTALLED → auto verify
-    await autoVerifyRowId(urlRowId);
-    return;
-  }
-
-  /* 🚫 NO row_id → normal fallback flow */
-  const savedRow  = localStorage.getItem("rowId");
+/* AUTO LOGIN */
+window.addEventListener("DOMContentLoaded", () => {
+  const savedRow = localStorage.getItem("rowId");
   const savedLink = localStorage.getItem("linkId");
 
-  if (savedRow && savedLink && isRunningAsPWA()) {
-    rowId  = savedRow;
+  if (savedRow && savedLink) {
+    rowId = savedRow;
     linkId = savedLink;
     unlockApp();
     initOneSignal();
-  } else {
-    document.getElementById("loginOverlay").style.display = "flex";
   }
 });
 
-/* =============== AUTO VERIFY =============== */
-async function autoVerifyRowId(rowIdFromURL) {
-  try {
-    const res = await fetch(VERIFY_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ row_id: rowIdFromURL })
-    });
-
-    const data = await res.json();
-    if (!data.valid) return;
-
-    rowId  = rowIdFromURL;
-    linkId = data.link_id;
-
-    localStorage.setItem("rowId", rowId);
-    localStorage.setItem("linkId", linkId);
-
-    unlockApp();
-    initOneSignal();
-
-  } catch (err) {
-    console.error("Auto verify failed", err);
-  }
-}
-
-/* =============== LOGIN (manual) =============== */
+/* LOGIN */
 async function submitRowId() {
   const error = document.getElementById("loginError");
   rowId = document.getElementById("rowIdInput").value.trim();
@@ -215,14 +138,14 @@ async function submitRowId() {
   }
 }
 
-/* =============== UNLOCK APP =============== */
+/* UNLOCK APP */
 function unlockApp() {
   document.getElementById("loginOverlay").style.display = "none";
   const frame = document.getElementById("appFrame");
   if (!frame.src) frame.src = APP_URL;
 }
 
-/* =============== ONESIGNAL =============== */
+/* ONESIGNAL – THE ONLY CORRECT WAY */
 function initOneSignal() {
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(async function (OneSignal) {
@@ -235,24 +158,45 @@ function initOneSignal() {
       notifyButton: { enable: true }
     });
 
+    const rowIdLocal  = localStorage.getItem("rowId");
+    const linkIdLocal = localStorage.getItem("linkId");
+    if (!rowIdLocal) return;
+
+    // 🔔 THIS is when the player ACTUALLY exists
     OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
       if (!event.current?.optedIn) return;
 
-      await OneSignal.login(rowId);
+      try {
+        // 1️⃣ Attach external_id
+        await OneSignal.login(rowIdLocal);
 
-      const oneSignalId = OneSignal.User.onesignalId;
-      if (!oneSignalId) return;
+        // 2️⃣ Guaranteed OneSignal player ID
+        const oneSignalId = OneSignal.User.onesignalId;
+        if (!oneSignalId) {
+          console.error("OneSignal ID missing");
+          return;
+        }
 
-      await fetch(REGISTER_URL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          rowId,
-          linkId,
-          one_signal_id: oneSignalId,
-          device_type: deviceType
-        })
-      });
+        console.log("✅ OneSignal ID:", oneSignalId);
+
+        // 3️⃣ Save to Supabase
+        const res = await fetch(REGISTER_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            rowId: rowIdLocal,
+            linkId: linkIdLocal,
+            one_signal_id: oneSignalId,
+            device_type: deviceType
+          })
+        });
+
+        const json = await res.json();
+        console.log("✅ Supabase response:", json);
+
+      } catch (err) {
+        console.error("❌ OneSignal sync error:", err);
+      }
     });
   });
 }
